--- a/FlirOneCamera/app/src/main/res/layout/activity_main.xml
+++ b/FlirOneCamera/app/src/main/res/layout/activity_main.xml
@@ -36,11 +36,25 @@
             android:layout_marginTop="8dp"
             android:layout_marginHorizontal="8dp"
             android:onClick="connectFlirOne"
-            
+
             android:text="connect"
             android:textColor="@android:color/white"
 
             />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/getResult"
+            android:layout_above="@id/connect_flir_one"
+            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="8dp"
+            android:onClick="getRe"
+
+            android:text="get"
+            android:textColor="@android:color/white"
+
+            />
+
         <Button
             android:id="@+id/disconnect_any"
             android:layout_width="match_parent"
