--- a/FlirOneCamera/app/src/main/res/layout/activity_main.xml
+++ b/FlirOneCamera/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:id="@+id/description"
+            android:layout_marginBottom="120dp"
+            android:textSize="20dp"
+            android:text="Connect to FilrOne"
+            android:textColor="#17A011"
+            android:id="@+id/temperatureText"
             />
 <!--        <com.samples.flironecamera.helpers.GraphicOverlay-->
 <!--            android:layout_width="match_parent"-->
@@ -28,32 +32,47 @@
 <!--            android:id="@+id/graphic_overlay"-->
 <!--            android:layout_above="@id/connect_flir_one"-->
 <!--            />-->
+
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:id="@+id/temperatureText"-->
+<!--            android:layout_marginHorizontal="8dp"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:background="@drawable/data_temperature"-->
+<!--            android:text="connect"-->
+<!--            android:textColor="@android:color/holo_blue_dark"-->
+
+<!--            />-->
         <Button
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/connect_flir_one"
+            android:layout_centerVertical="true"
             android:layout_above="@id/disconnect_any"
             android:layout_marginTop="8dp"
             android:layout_marginHorizontal="8dp"
-            android:onClick="connectFlirOne"
-
+            android:background="@drawable/data_temperature"
             android:text="connect"
             android:textColor="@android:color/white"
 
             />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/getResult"
-            android:layout_above="@id/connect_flir_one"
-            android:layout_marginTop="8dp"
-            android:layout_marginHorizontal="8dp"
-            android:onClick="getRe"
+<!--        <Button-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:id="@+id/getResult"-->
+<!--            android:layout_above="@id/connect_flir_one"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginHorizontal="8dp"-->
+<!--            android:onClick="getRe"-->
 
-            android:text="get"
-            android:textColor="@android:color/white"
+<!--            android:text="get"-->
+<!--            android:textColor="@android:color/white"-->
 
-            />
+<!--            />-->
+
 
         <Button
             android:id="@+id/disconnect_any"
@@ -63,9 +82,11 @@
             android:layout_marginVertical="4dp"
             android:layout_marginHorizontal="8dp"
             android:onClick="disconnect"
-            android:background="@android:color/holo_red_light"
+            android:background="@drawable/data_temperature"
             android:text="Disconnect"
-            android:textColor="@android:color/white"
+            android:visibility="invisible"
+            android:textColor="@android:color/black"
+
             />
 
 </RelativeLayout>
