--- a/FlirOneCamera/app/src/main/res/layout/tfe_od_activity_camera.xml
+++ b/FlirOneCamera/app/src/main/res/layout/tfe_od_activity_camera.xml
@@ -32,6 +32,7 @@
         <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/container"
+            android:layout_marginTop="53dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="org.tensorflow.demo.CameraActivity" />
@@ -44,10 +45,10 @@
             android:background="@color/tfe_semi_transparent">
 
             <ImageView
-                android:visibility="invisible"
+                android:visibility="visible"
                 android:layout_marginLeft="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/logo" />
 <!--            <TextView-->
 <!--                android:layout_width="wrap_content"-->
@@ -119,7 +120,7 @@
         android:background="@drawable/connect_button" />
     <Button
         android:id="@+id/disconnect_flir"
-        android:onClick="setData"
+        android:onClick="disconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -130,30 +131,31 @@
         android:paddingRight="20dp"
         app:layout_anchor="@id/bottom_sheet_layout"
         app:layout_anchorGravity="top|end"
+        android:background="@drawable/connect_button"
         android:textColor="@android:color/holo_red_light" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Temperature"
-        android:id="@+id/temp_data"
-        android:textColor="@android:color/holo_red_light"
-        app:layout_anchor="@id/bottom_sheet_layout"
-        app:layout_anchorGravity="top|center" />
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Temperature"-->
+<!--        android:id="@+id/temp_data"-->
+<!--        android:textColor="@android:color/holo_red_light"-->
+<!--        app:layout_anchor="@id/bottom_sheet_layout"-->
+<!--        app:layout_anchorGravity="top|center" />-->
+    <include layout="@layout/activity_main"/>
 
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_seach"
-            android:visibility="invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_search_category_default"
-            android:tint="@android:color/white"
-            android:layout_margin="16dp"
-
-            app:layout_anchor="@id/bottom_sheet_layout"
-            app:layout_anchorGravity="top|end"
-            />
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/fab_seac"-->
+<!--            android:visibility="invisible"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@android:drawable/ic_search_category_default"-->
+<!--            android:tint="@android:color/white"-->
+<!--            android:layout_margin="16dp"-->
+<!--            app:layout_anchor="@id/bottom_sheet_layout"-->
+<!--            app:layout_anchorGravity="top|end"-->
+<!--            />-->
 
 
 
