--- a/FlirOneCamera/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
+++ b/FlirOneCamera/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
@@ -64,16 +64,18 @@
             android:layout_marginTop="10dp"
             android:text="Temperature"
             android:textColor="@android:color/black" />
+        <TextView
+            android:id="@+id/frame_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="right"
+            android:text="640*480"
+            android:textColor="@android:color/black" />
 
-        <ImageView
-            android:id="@+id/msx_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_above="@id/connect_flir_one"
-            android:maxWidth="50dp"
-            android:layout_gravity="right"
-            android:minWidth="50dp"
-            />
+
+
+
     </LinearLayout>
 
 
