--- a/FlirOneCamera/app/src/main/res/layout/image_edit_dialog.xml
+++ b/FlirOneCamera/app/src/main/res/layout/image_edit_dialog.xml
@@ -23,11 +23,26 @@
         android:adjustViewBounds="true"
         android:src="@drawable/ic_baseline_image_24"
         />
-
     <EditText
         android:layout_gravity="center"
+        android:background="@drawable/input_name"
+        android:id="@+id/id_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:hint="Enter Id "
+        android:padding="15dp"
+        android:paddingLeft="20dp"
+        android:layout_marginTop="10dp"
+        />
+
+    <EditText
+        android:padding="15dp"
+        android:paddingLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:background="@drawable/input_name"
         android:id="@+id/dlg_input"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:hint="The dialog hint"
         />
