--- a/FlirOneCamera/app/src/main/res/layout/tfe_od_activity_camera.xml
+++ b/FlirOneCamera/app/src/main/res/layout/tfe_od_activity_camera.xml
@@ -43,6 +43,11 @@
             android:layout_height="?attr/actionBarSize"
             android:layout_alignParentTop="true"
             android:background="@color/tfe_semi_transparent">
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:src="@drawable/success"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
 
             <ImageView
                 android:visibility="visible"
@@ -56,8 +61,17 @@
 <!--                android:layout_marginLeft="50dp"-->
 <!--                android:text="VKThermal"/>-->
 
-
         </androidx.appcompat.widget.Toolbar>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+
+
+
+        </LinearLayout>
 
     </RelativeLayout>
 
@@ -77,15 +91,19 @@
 
 
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|top"
-        android:tint="@android:color/white"
-        android:src="@android:drawable/ic_input_add"
-        android:layout_margin="16dp"
-        />
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/fab_add"-->
+<!--        android:visibility="visible"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center|bottom"-->
+<!--        android:padding="100dp"-->
+<!--        android:tint="@android:color/white"-->
+<!--        android:src="@android:drawable/ic_input_add"-->
+<!--        android:layout_marginBottom="100dp"-->
+<!--        />-->
+
+
 
 
 <!--    <View-->
@@ -104,7 +122,7 @@
 <!--        app:layout_anchorGravity="bottom|center"-->
 <!--        app:layout_anchor="@id/dummy" />-->
     <Button
-        android:id="@+id/connect_to_flirOne"
+        android:id="@+id/connect_to_flir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -112,14 +130,16 @@
         android:text="Connect"
         android:layout_marginLeft="20dp"
         android:onClick="connectFlirOne"
+        android:textStyle="bold"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
         app:layout_anchor="@id/bottom_sheet_layout"
         app:layout_anchorGravity="top|start"
-        android:textColor=" #7bc043"
+        android:textColor="@android:color/white"
         android:background="@drawable/connect_button" />
     <Button
         android:id="@+id/disconnect_flir"
+        android:textStyle="bold"
         android:onClick="disconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -131,8 +151,8 @@
         android:paddingRight="20dp"
         app:layout_anchor="@id/bottom_sheet_layout"
         app:layout_anchorGravity="top|end"
-        android:background="@drawable/connect_button"
-        android:textColor="@android:color/holo_red_light" />
+        android:background="@drawable/disconnect_button"
+        android:textColor="@android:color/white" />
 
 <!--    <TextView-->
 <!--        android:layout_width="wrap_content"-->
@@ -143,6 +163,40 @@
 <!--        app:layout_anchor="@id/bottom_sheet_layout"-->
 <!--        app:layout_anchorGravity="top|center" />-->
     <include layout="@layout/activity_main"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="vertical">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fab_add"
+            android:visibility="invisible"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="Add This Face"
+            android:padding="10dp"
+            android:textStyle="bold"
+            android:background="@drawable/add"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/ChangeAttendance"
+            android:onClick="GoToAttendance"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="start"
+            android:visibility="invisible"
+            android:src="@drawable/back"
+            android:paddingLeft="2dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/connect_button"
+            android:layout_marginBottom="40dp"
+            android:textColor="@android:color/black" />
+
+
+    </LinearLayout>
 
 
 <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
