--- a/FlirOneCamera/app/src/main/res/layout/activity_login.xml
+++ b/FlirOneCamera/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,19 @@
             android:textColor="#ffffff"
             android:background="@drawable/button_selection"
             android:text="Without Account"/>
+        
+
 
 
     </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FF9800"
+        android:background="#00FF9800"
+        android:onClick="Changepassword"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        android:text="Forget password?"/>
+    
 </LinearLayout>
