--- a/FlirOneCamera/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
+++ b/FlirOneCamera/app/src/main/res/layout/tfe_od_layout_bottom_sheet.xml
@@ -51,6 +51,36 @@
 <!--            android:text="640*480"-->
 <!--            android:textColor="@android:color/black" />-->
 <!--    </LinearLayout>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="2"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/frame_info"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:text="location"
+            android:layout_marginBottom="10dp"
+            android:textColor="@android:color/black" />
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="10dp"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/input_name"
+            android:spinnerMode="dropdown"/>
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +90,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/text"
+            android:id="@+id/text_attendance"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,26 +114,9 @@
 
 
 
+
     </LinearLayout>
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical">-->
 
-<!--        <Button-->
-<!--            android:id="@+id/GotoAddFace"-->
-<!--            android:layout_width="300dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:onClick="GotoAddFace"-->
-<!--            android:background="@drawable/connect_button"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:text="Add More People"-->
-<!--            android:textColor="@android:color/black" />-->
-
-
-
-<!--    </LinearLayout>-->
 
 
 
