--- a/FlirOneCamera/app/src/main/res/layout/activity_main.xml
+++ b/FlirOneCamera/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,13 @@
             android:maxWidth="50dp"
             android:minWidth="50dp"
             />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+                android:text="me"
+            android:layout_centerInParent="true"
+            android:background="#00BCD4"
+                android:id="@+id/test_text"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,6 +37,42 @@
             android:background="@drawable/data_temperature"
             android:id="@+id/temperatureText"
             />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:paddingTop="260dp"
+                    android:text=" + "
+                    android:textSize="40dp"
+                    android:textColor="#4CAF50"
+                    android:gravity="center"
+                    android:layout_marginRight="30dp"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text=" + "
+                    android:textSize="50dp"
+                    android:textColor="#4CAF50"
+                    android:gravity="center"
+                    android:id="@+id/FaceText"
+                    android:layout_centerInParent="true"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:paddingTop="260dp"
+                    android:text=" + "
+                    android:textSize="50dp"
+                    android:textColor="#4CAF50"
+                    android:gravity="center"
+                    android:layout_marginLeft="30dp"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
 
 
 
@@ -67,6 +110,7 @@
             android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="connectFlirOne"
             android:id="@+id/connect_flir_one"
             android:layout_centerVertical="true"
             android:layout_above="@id/disconnect_any"
