--- a/FlirOneCamera/app/src/main/res/layout/activity_main.xml
+++ b/FlirOneCamera/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,26 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     >
-        <ImageView
-            android:id="@+id/msx_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_above="@id/connect_flir_one"
-            android:maxWidth="50dp"
-            android:minWidth="50dp"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-                android:text="me"
-            android:layout_centerInParent="true"
-            android:background="#00BCD4"
-                android:id="@+id/test_text"/>
+<!--        <ImageView-->
+<!--            android:id="@+id/msx_image"-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:layout_above="@id/msx_image1"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:maxWidth="50dp"-->
+<!--            android:minWidth="50dp"-->
+<!--            />-->
+<!--        <ImageView-->
+<!--            android:id="@+id/msx_image1"-->
+<!--            android:src="@drawable/logo"-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_marginLeft="200dp"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:layout_above="@id/connect_flir_one"-->
+<!--            android:maxWidth="50dp"-->
+<!--            android:minWidth="50dp"-->
+<!--            />-->
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,41 +43,41 @@
             android:id="@+id/temperatureText"
             />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:paddingTop="260dp"
-                    android:text=" + "
-                    android:textSize="40dp"
-                    android:textColor="#4CAF50"
-                    android:gravity="center"
-                    android:layout_marginRight="30dp"
-                    android:layout_height="wrap_content"/>
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:gravity="center"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_height="wrap_content">-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:paddingTop="260dp"-->
+<!--                    android:text=" + "-->
+<!--                    android:textSize="40dp"-->
+<!--                    android:textColor="#4CAF50"-->
+<!--                    android:gravity="center"-->
+<!--                    android:layout_marginRight="30dp"-->
+<!--                    android:layout_height="wrap_content"/>-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:text=" + "
-                    android:textSize="50dp"
-                    android:textColor="#4CAF50"
-                    android:gravity="center"
-                    android:id="@+id/FaceText"
-                    android:layout_centerInParent="true"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:paddingTop="260dp"
-                    android:text=" + "
-                    android:textSize="50dp"
-                    android:textColor="#4CAF50"
-                    android:gravity="center"
-                    android:layout_marginLeft="30dp"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:text=" + "-->
+<!--                    android:textSize="50dp"-->
+<!--                    android:textColor="#4CAF50"-->
+<!--                    android:gravity="center"-->
+<!--                    android:id="@+id/FaceText"-->
+<!--                    android:layout_centerInParent="true"-->
+<!--                    android:layout_height="wrap_content"/>-->
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:paddingTop="260dp"-->
+<!--                    android:text=" + "-->
+<!--                    android:textSize="50dp"-->
+<!--                    android:textColor="#4CAF50"-->
+<!--                    android:gravity="center"-->
+<!--                    android:layout_marginLeft="30dp"-->
+<!--                    android:layout_height="wrap_content"/>-->
+<!--        </LinearLayout>-->
 
 
 
