--- a/FlirOneCamera/app/src/main/res/layout/tfe_od_activity_camera.xml
+++ b/FlirOneCamera/app/src/main/res/layout/tfe_od_activity_camera.xml
@@ -38,6 +38,7 @@
             tools:context="com.samples.flironecamera.CameraActivity" >
         </FrameLayout>
 
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -52,6 +53,15 @@
                android:background="@drawable/button_selection"
                android:drawableStart="@drawable/account"
                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingRight="30dp"
+                android:id="@+id/showEmail"
+                android:gravity="right"
+                android:textSize="15dp"
+                android:textColor="#FF9800"
+                android:text="Unknown"/>
 
 
             <ImageView
@@ -67,6 +77,7 @@
 <!--                android:text="VKThermal"/>-->
 
         </androidx.appcompat.widget.Toolbar>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
