--- a/FlirOneCamera/app/src/main/res/layout/activity_main.xml
+++ b/FlirOneCamera/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     >
+
+
 <!--        <ImageView-->
 <!--            android:id="@+id/msx_image"-->
 <!--            android:layout_width="200dp"-->
@@ -37,31 +39,31 @@
             android:paddingRight="30dp"
             android:paddingLeft="30dp"
             android:text="me"
-           android:layout_centerHorizontal="true"
+            android:layout_centerHorizontal="true"
             android:textColor="@android:color/white"
             android:background="@drawable/data_temperature"
             android:id="@+id/temperatureText"
             />
-        <TextView
-            android:layout_width="wrap_content"
-            android:background="@drawable/input_name"
-            android:id="@+id/top"
-            android:paddingLeft="250dp"
-            android:paddingRight="150dp"
-            android:layout_marginBottom="450dp"
-            android:layout_centerInParent="true"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:background="@drawable/input_name"
-            android:layout_below="@+id/top"
-            android:id="@+id/bttom"
-            android:paddingLeft="250dp"
-            android:paddingRight="150dp"
-            android:layout_centerInParent="true"
-            android:layout_height="wrap_content"/>
 
 
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:background="@drawable/input_name"-->
+<!--            android:id="@+id/top"-->
+<!--            android:paddingLeft="250dp"-->
+<!--            android:paddingRight="150dp"-->
+<!--            android:layout_marginBottom="450dp"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:layout_height="wrap_content"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:background="@drawable/input_name"-->
+<!--            android:layout_below="@+id/top"-->
+<!--            android:id="@+id/bttom"-->
+<!--            android:paddingLeft="250dp"-->
+<!--            android:paddingRight="150dp"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:layout_height="wrap_content"/>-->
 
 
 <!--        <LinearLayout-->
@@ -113,7 +115,6 @@
             android:text="Add This Face"
             android:layout_height="wrap_content"/>
 
-
 <!--        <com.samples.flironecamera.helpers.GraphicOverlay-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="match_parent"-->
@@ -147,8 +148,10 @@
             android:background="@drawable/data_temperature"
             android:text="connect"
             android:textColor="@android:color/white"
-
             />
+
+<!-- use this when use tablet for face location     -->
+
 <!--        <Button-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
@@ -157,11 +160,14 @@
 <!--            android:layout_marginTop="8dp"-->
 <!--            android:layout_marginHorizontal="8dp"-->
 <!--            android:onClick="getRe"-->
-
 <!--            android:text="get"-->
 <!--            android:textColor="@android:color/white"-->
 
 <!--            />-->
+
+
+
+
 
 
         <Button
