--- a/FlirOneCamera/app/src/main/res/layout/activity_main.xml
+++ b/FlirOneCamera/app/src/main/res/layout/activity_main.xml
@@ -29,22 +29,37 @@
 <!--            android:maxWidth="50dp"-->
 <!--            android:minWidth="50dp"-->
 <!--            />-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="150dp"
+            android:layout_centerVertical="true"
+            android:textSize="20dp"
+            android:textColor="#2AD631"
+            android:text="O"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="100dp"
             android:layout_marginBottom="250dp"
             android:textSize="80dp"
             android:paddingRight="30dp"
             android:paddingLeft="30dp"
-            android:text="me"
+            android:text="Scan Here"
             android:layout_centerHorizontal="true"
             android:textColor="@android:color/white"
             android:background="@drawable/data_temperature"
             android:id="@+id/temperatureText"
             />
 
+        <ImageView
+
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_width="500dp"
+            android:src="@drawable/face_shape"
+            android:layout_height="wrap_content"/>
 
 <!--        <TextView-->
 <!--            android:layout_width="wrap_content"-->
